syntax = "proto3";
package akash.staking.v1beta3;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";

import "akash/staking/v1beta3/params.proto";

option go_package = "pkg.akt.dev/go/node/staking/v1beta3";

// Query defines the gRPC querier service
service Query {
    // Params returns the total set of minting parameters.
    rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
        option (google.api.http).get = "/akash/staking/v1beta3/params";
    }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
    // params defines the parameters of the module.
    Params params = 1 [
        (gogoproto.nullable)   = false,
        (amino.dont_omitempty) = true
    ];
}
